...
                    android:text="@string/cep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:labelFor="@+id/et_cep"/>

            <EditText
                    android:id="@+id/et_cep"
                    android:inputType="number"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="Autofill"/>

            <Button
                    android:id="@+id/btn_cep"
                    android:text="@string/consultar"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/botao_roxo"
                    android:textColor="#fff"
...
