...
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/logradouro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_logradouro"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title"/>

    <TextView
            tools:text="Praça da Sé"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/logradouro"
            app:layout_constraintStart_toEndOf="@+id/label_logradouro"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_logradouro"
...
